# elliptic

./: .gitignore  .project  Contents.md  EllipticIntegrals.md  JacobiEllipticFunctions.md  ProjectHome.md  README  README.markdown  README.md  ThetaFunctions.md  agm.m  app.js  arclength_ellipse.m  bench.m  bench_gpu_results.csv  ellipj.m  ellipji.m  elliptic-gadget-1.xml  elliptic.md  elliptic12.m  elliptic123.m  elliptic12i.m  elliptic3.m  index.html  inverselliptic2.m  jacobiThetaEta.m  params.json  setup.m  style.css  theta_prime.m
.circleci/: config.yml
data/: functions.js
docs/: GPU.md  benchmark_comparison.md  benchmark_gpu.md  gh-pages-body.md
examples/: examples.css  index.html
gadgets/: elliptic-gadget-2.xml  elliptic-gadget-3.xml  elliptic-gadget-4.xml
matlab/: README.md
python/: .gitignore  README.md  bench.py  bench_results.csv  bench_results_gpu2.csv  pyproject.toml
python/elliptic/: __init__.py  _agm.py  _utils.py  _xputils.py  agm.py  applications.py  bulirsch.py  carlson.py  complex_elliptic.py  ellipj.py  elliptic12.py  elliptic3.py  ellipticBD.py  ellipticBDJ.py  inverse.py  jacobi_edj.py  nome.py  theta.py  weierstrass.py
python/examples/: gpu_asteroid_benchmark.py  gpu_asteroid_validation.py
python/tests/: conftest.py  test_associate.py  test_elliptic12.py  test_numerical_precision.py  test_parity.py  test_reference_tables.py
scripts/: extract_function_examples.py  prepare_asteroid_dataset.py  sample_asteroid_subset.py  update_gh_pages.sh  validate_against_horizons.py
src/: agm.m  arclength_ellipse.m  ellipj.m  ellipji.m  nomeq.m  (+15 more)
(+88 files in other folders)
