[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elliptic-functions"
version = "4.1.0"
description = "Elliptic integrals and functions — NumPy, PyTorch, JAX"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0" }
authors = [{ name = "Igor Moiseev", email = "moiseev.igor@gmail.com" }]
keywords = ["elliptic integrals", "elliptic functions", "special functions", "mathematics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "array-api-compat>=1.9",
]

[project.urls]
Homepage      = "https://github.com/moiseevigor/elliptic"
Repository    = "https://github.com/moiseevigor/elliptic"
Documentation = "https://moiseevigor.github.io/elliptic/"
"Bug Tracker" = "https://github.com/moiseevigor/elliptic/issues"

[project.optional-dependencies]
torch = ["torch>=2.0"]
jax   = ["jax>=0.4"]
dev   = ["pytest>=7", "scipy>=1.8", "mpmath>=1.3"]

[tool.hatch.build.targets.wheel]
packages = ["elliptic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
